Fixed on mobile

--- a/style/style.less
+++ b/style/style.less
@@ -127,6 +127,7 @@ body {
 
 .left {
  width: 100%;
+ position: fixed;
 }
 .right {
   width: 80%;
@@ -135,7 +136,7 @@ body {
   position: relative;
   bottom: 7em;
   background: white;
-  margin: 5% 5% -16% 5%;
+  margin: 105% 5% -16% 5%;
   -webkit-box-shadow: 0 0 30px 1px rgba(0,0,0,.05);
 box-shadow: 0 0 30px 1px rgba(0,0,0,.05);
 }
@@ -185,7 +186,7 @@ a:hover {
   color: @lightgrey;
 }
 
-@media screen and (min-width: 740px){
+@media screen and (min-width: 600px){
     .left {
       width: 60%;
       padding: 0;
@@ -205,6 +206,6 @@ box-shadow: 0 0 30px 1px rgba(0,0,0,0);
 bottom: 0;
   }
   .brush {
-  display: none;
-}
+    display: none;
+  }
 }
